@@ -13,9 +13,10 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import jakarta.servlet.http.HttpServletResponse;
 import java.util.Arrays;
 import java.util.List;
-import jakarta.servlet.http.HttpServletResponse;
 
 @Configuration
 public class SecurityConfig {
@@ -35,29 +36,48 @@ public class SecurityConfig {
                                 .sessionManagement(session -> session
                                                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                                 .authorizeHttpRequests(auth -> auth
+//                                                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                                                // ✅ Allow preflight
                                                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                                                // ✅ Public APIs
                                                 .requestMatchers(
+                                                				"/api/admin/login", 
                                                                 "/api/users/register",
                                                                 "/api/users/login",
                                                                 "/api/users/google-login",
                                                                 "/api/users/complete-registration/**",
+                                                                "/api/admin/login",
                                                                 "/oauth2/**",
                                                                 "/login/**")
                                                 .permitAll()
+
+                                                // ✅ Admin APIs
+                                                .requestMatchers("/api/admin/**").hasRole("ADMIN")
+
+                                                // ✅ Customer APIs
+                                                .requestMatchers("/api/customer/**").hasRole("USER")
+
+                                                // ✅ Everything else secured
                                                 .anyRequest().authenticated())
                                 .formLogin(form -> form.disable())
                                 .httpBasic(basic -> basic.disable())
                                 .exceptionHandling(exception -> exception
                                                 .authenticationEntryPoint((request, response, authException) -> {
-                                                        if (request.getRequestURI().startsWith("/api/")) {
+                                                        String uri = request.getRequestURI();
+                                                        String accept = request.getHeader("Accept");
+
+                                                        if (uri.startsWith("/api/")
+                                                                        || (accept != null && accept.contains(
+                                                                                        "application/json"))) {
                                                                 response.sendError(HttpServletResponse.SC_UNAUTHORIZED,
                                                                                 "Unauthorized");
                                                         } else {
                                                                 response.sendRedirect("/oauth2/authorization/google");
                                                         }
                                                 }))
-                                .oauth2Login(oauth2 -> oauth2
-                                                .successHandler(oauthSuccessHandler))
+                                .oauth2Login(oauth2 -> oauth2.successHandler(oauthSuccessHandler))
                                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
                 return http.build();
@@ -65,11 +85,16 @@ public class SecurityConfig {
 
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
+
                 CorsConfiguration configuration = new CorsConfiguration();
                 configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Cache-Control"));
+                configuration.setAllowedMethods(
+                                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(
+                                Arrays.asList("Authorization", "Content-Type", "Cache-Control", "Accept"));
+                configuration.setExposedHeaders(List.of("Authorization"));
                 configuration.setAllowCredentials(true);
+
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", configuration);
                 return source;
